--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta name="copyright" content="Copyright © 2023 - Marroquineria premium">
     <meta name="robots" content="index, follow">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="shortcut icon" href="../Marroquineria/Favicon/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../Marroquineria/Css/main.css">
+    <link rel="shortcut icon" href="Favicon/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="Css/main.css">
 </head>
 <body>
   <div class="contador">
@@ -27,7 +27,7 @@
   <nav class="navbar navbar-expand-lg botonera">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
-        <img src="../Marroquineria/Imagenes/Mi proyecto.png" alt="Logo Marroquineria Premium">
+        <img src="Imagenes/Mi proyecto.png" alt="Logo Marroquineria Premium">
       </a>
       <button class="custom-toggler d-block d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         Menú
@@ -52,7 +52,7 @@
   </nav>
       <header class="h-video">
         <video autoplay muted loop controls controlsList="nodownload">
-          <source src="../Marroquineria/Videos/propaganda final marroquineria 2.mp4.mp4" type="video/mp4">
+          <source src="Videos/propaganda final marroquineria 2.mp4.mp4" type="video/mp4">
           <img src="poster.jpg" alt="Video promocional">
         </video>
       </header>
@@ -92,7 +92,7 @@
             </h3>
             <div id="certificado" class="accordion-collapse collapse">
               <div class="accordion-body">
-                <img src="../Marroquineria/Imagenes/certificado.png" alt="Certificado del curso" class="imagen-certificado">
+                <img src="Imagenes/certificado.png" alt="Certificado del curso" class="imagen-certificado">
               </div>
             </div>
           </div>
@@ -200,22 +200,22 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../Marroquineria/Imagenes/Proyecto nuevo (1).webp" class="d-block w-100" alt="imagen de billetera de cuero">
+                <img src="Imagenes/Proyecto nuevo (1).webp" class="d-block w-100" alt="imagen de billetera de cuero">
               </div>
               <div class="carousel-item">
-                <img src="../Marroquineria/Imagenes/Proyecto nuevo (2).webp" class="d-block w-100" alt="imagen de cinturon">
+                <img src="Imagenes/Proyecto nuevo (2).webp" class="d-block w-100" alt="imagen de cinturon">
               </div>
               <div class="carousel-item">
-                <img src="../Marroquineria/Imagenes/Proyecto nuevo (3).webp" class="d-block w-100" alt="imagen de manipulacion de cuero">
+                <img src="Imagenes/Proyecto nuevo (3).webp" class="d-block w-100" alt="imagen de manipulacion de cuero">
               </div>
               <div class="carousel-item">
-                <img src="../Marroquineria/Imagenes/Proyecto nuevo (4).webp" class="d-block w-100" alt="imagen de morral de cuero">
+                <img src="Imagenes/Proyecto nuevo (4).webp" class="d-block w-100" alt="imagen de morral de cuero">
               </div>
               <div class="carousel-item">
-                <img src="../Marroquineria/Imagenes/Proyecto nuevo (5).webp" class="d-block w-100" alt="imagen de fundas para herramientas en cuero">
+                <img src="Imagenes/Proyecto nuevo (5).webp" class="d-block w-100" alt="imagen de fundas para herramientas en cuero">
               </div>
               <div class="carousel-item">
-                <img src="../Marroquineria/Imagenes/Proyecto nuevo (7).webp" class="d-block w-100" alt="imagen de morral de cuero">
+                <img src="Imagenes/Proyecto nuevo (7).webp" class="d-block w-100" alt="imagen de morral de cuero">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -229,8 +229,8 @@
           </div>
         </div>
         <div class="certificados">
-          <img class="garantia" src="../Marroquineria/Imagenes/admin-ajax.png" alt="Garantía">
-          <img class="compra-segura" src="../Marroquineria/Imagenes/SELLOOOS-1.png" alt="Compra segura">
+          <img class="garantia" src="Imagenes/admin-ajax.png" alt="Garantía">
+          <img class="compra-segura" src="Imagenes/SELLOOOS-1.png" alt="Compra segura">
         </div>
         <div>
           <h4 class="h4-recomendaciones">
@@ -242,7 +242,7 @@
                 <figure class="figuras">
                   <figcaption>"¡Super recomendable este curso de marroquinería premium en línea! Me sorprendió gratamente la calidad de las lecciones y la atención al detalle que se mostró en cada paso del proceso. Aprendí técnicas avanzadas de trabajos en cuero que nunca antes había encontrado en otros cursos. Realmente me siento confiado ahora para crear productos de marroquinería. ¡Una experiencia de aprendizaje excepcional!"</figcaption>
                   <div class="banderas">
-                    <img src="../Marroquineria/Imagenes/svg/ar.svg" alt="bandera argentina">
+                    <img src="Imagenes/svg/ar.svg" alt="bandera argentina">
                     <p>Camila Fernandez</p>
                   </div>
                 </figure>
@@ -251,7 +251,7 @@
                 <figure class="figuras">
                   <figcaption>"Tomé el curso de marroquinería premium en línea y fue una decisión increíble. El instructor es un experto apasionado en el campo y se nota en la forma en que presenta los contenidos. Su habilidad para transmitir conocimientos complejos de manera clara y concisa es admirable. Además, siempre estuvo dispuesto a responder mis preguntas y brindar orientación personalizada. Sin duda, una gran experiencia de aprendizaje."</figcaption>
                   <div class="banderas">
-                    <img src="../Marroquineria/Imagenes/svg/cl.svg" alt="bandera chilena">
+                    <img src="Imagenes/svg/cl.svg" alt="bandera chilena">
                     <p>Valentina Silva</p>
                   </div>
                 </figure>
@@ -260,7 +260,7 @@
                 <figure class="figuras">
                   <figcaption>"Se você está interessado em artigos de couro e deseja levar suas habilidades para o próximo nível, este curso on-line é obrigatório. Adorei a quantidade de conteúdo prático que foi incluído em cada lição. De padrões de design a técnicas avançadas de costura, tudo foi explicado em profundidade e acompanhado de demonstrações práticas. Realmente me senti como se estivesse em um workshop ao vivo. Mal posso esperar para aplicar o que aprendi em meus próprios projetos!"</figcaption>
                   <div class="banderas">
-                    <img src="../Marroquineria/Imagenes/svg/br.svg" alt="bandera brasileña">
+                    <img src="Imagenes/svg/br.svg" alt="bandera brasileña">
                     <p>Lucas Moreira</p>
                   </div>
                 </figure>
@@ -269,7 +269,7 @@
                 <figure class="figuras">
                   <figcaption>"Una de las cosas que más me gustó de este curso de marroquinería premium en línea fue la comunidad en la que me integré. A través del foro en línea y las sesiones de preguntas y respuestas en vivo, pude conectarme con otros estudiantes apasionados por la marroquinería. Compartir ideas, recibir retroalimentación y apoyarnos mutuamente fue una parte valiosa de mi experiencia de aprendizaje. Si buscas un curso en línea que no solo te enseñe, sino que también te brinde una comunidad comprometida, este es el indicado."</figcaption>
                   <div class="banderas">
-                    <img src="../Marroquineria/Imagenes/svg/ar.svg" alt="bandera argentina">
+                    <img src="Imagenes/svg/ar.svg" alt="bandera argentina">
                     <p>Agustín Suarez</p>
                   </div>
                 </figure>
