--- a/index.html
+++ b/index.html
@@ -51,10 +51,17 @@
     </div>
   </nav>
       <header class="h-video">
-        <video autoplay muted loop controls controlsList="nodownload">
+        <!-- <video autoplay muted loop controls controlsList="nodownload">
           <source src="Videos/propaganda final marroquineria 2.mp4.mp4" type="video/mp4">
           <img src="poster.jpg" alt="Video promocional">
-        </video>
+        </video> -->
+        <div class="video-container">
+          <video id="miVideo" autoplay muted loop controls controlsList="nodownload">
+            <source src="Videos/propaganda final marroquineria 2.mp4.mp4" type="video/mp4">
+            <img src="poster.jpg" alt="Video promocional">
+          </video>
+          <button id="toggleSonido" onclick="toggleSonido()">Act/Des Sonido</button>
+        </div>
       </header>
       <main>
         <h1 class="h1-index">
