--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             <p>
               Tenés 7 días una vez realizado el pago para solicitar un reintegro si no es lo que esperabas o si no cumplimos tus espectativas. Te devolvemos el 100% del diner. Sin preguntas.
             </p>
-            <button class="btn btn-primary inscribirme-btn" onclick="window.open('https:https://pay.hotmart.com/P59156405Q?off=yi58rd7l&checkoutMode=10&offDiscount=2023&ref=V82093960Y&bid=1684689991807', '_blank')">
+            <button class="btn btn-primary inscribirme-btn" onclick="window.open('https://pay.hotmart.com/P59156405Q?off=yi58rd7l&checkoutMode=10&offDiscount=2023&ref=V82093960Y&bid=1684689991807', '_blank')">
               Inscribirme ahora
             </button>
           </div>
