--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <p>
               Tenés 7 días una vez realizado el pago para solicitar un reintegro si no es lo que esperabas o si no cumplimos tus espectativas. Te devolvemos el 100% del dinero. Sin preguntas.
             </p>
-            <button class="btn btn-primary inscribirme-btn" onclick="window.open('https://hotm.art/MarroquineriaMaxDescuento', '_blank')">
+            <button class="btn btn-primary inscribirme-btn" onclick="window.open('https://hotm.art/marroquineria_m', '_blank')">
               Inscribirme ahora
             </button>
           </div>
@@ -376,7 +376,7 @@
             <p>
               Tenés 7 días una vez realizado el pago para solicitar un reintegro si no es lo que esperabas o si no cumplimos tus espectativas. Te devolvemos el 100% del diner. Sin preguntas.
             </p>
-            <button class="btn btn-primary inscribirme-btn" onclick="window.open('https://hotm.art/MarroquineriaMaxDescuento', '_blank')">
+            <button class="btn btn-primary inscribirme-btn" onclick="window.open('https://hotm.art/marroquineria_m', '_blank')">
               Inscribirme ahora
             </button>
           </div>
