--- a/index.html
+++ b/index.html
@@ -305,10 +305,27 @@
                 ¿Tengo garantía?
               </button>
             </h3>
-            <div id="garantía" class="accordion-collapse collapse show">
+            <div id="garantía" class="accordion-collapse collapse">
               <div class="accordion-body">
                 <p>
                   Estamos tan seguros y convencidos del contenido del programa  que tienes 7 días de garantía; Si no quedas satisfecho durante estos dÍas desde que realizaste la compra puedes solicitar la devolución del 100% de tu dinero directamente en la plataforma de Hotmart donde esta alojado el programa.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h3 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#Proyecto" aria-expanded="false" aria-controls="Proyecto">
+                ¿Cuáles son los proyectos que vamos a realizar?
+              </button>
+            </h3>
+            <div id="Proyecto" class="accordion-collapse collapse show">
+              <div class="accordion-body">
+                <p>
+                  <span class="first-line">>Los proyectos que vas a realizar son:</span><br><br>
+                  - Cinturón <br>
+                  - Billetera de hombre/mujer <br>
+                  - Morral/Cartera <br>                 
                 </p>
               </div>
             </div>
