nuevo boton pago

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
               Tenés 7 días una vez realizado el pago para solicitar un reintegro si no es lo que esperabas o si no cumplimos tus espectativas. Te devolvemos el 100% del dinero. Sin preguntas.
             </p>
             <button class="btn btn-primary inscribirme-btn" onclick="window.open('https://hotm.art/marroquineria_m', '_blank')">
-              Inscribirme ahora
+              Conocé el costo
             </button>
           </div>
         </div>
@@ -566,7 +566,7 @@
               Tenés 7 días una vez realizado el pago para solicitar un reintegro si no es lo que esperabas o si no cumplimos tus espectativas. Te devolvemos el 100% del diner. Sin preguntas.
             </p>
             <button class="btn btn-primary inscribirme-btn" onclick="window.open('https://hotm.art/marroquineria_m', '_blank')">
-              Inscribirme ahora
+              Conocé el costo
             </button>
           </div>
         </div>
