de nuevo el max descuento

--- a/index.html
+++ b/index.html
@@ -388,13 +388,13 @@
         </div>
         <div id="inscribirme" class="div-pago">
           <h4>
-            ¡Aprovechá el 50% de descuento por el mes de Junio!
+            ¡Aprovechá el 50% de descuento por el mes de Julio!
           </h4>
           <div class="boton-pago">
             <p>
               Tenés 7 días una vez realizado el pago para solicitar un reintegro si no es lo que esperabas o si no cumplimos tus espectativas. Te devolvemos el 100% del dinero. Sin preguntas.
             </p>
-            <button class="btn btn-primary inscribirme-btn" onclick="window.open('https://hotm.art/marroquineria_m', '_blank')">
+            <button class="btn btn-primary inscribirme-btn" onclick="window.open('https://hotm.art/MarroquineriaMaxDescuento', '_blank')">
               Conocé el costo
             </button>
           </div>
@@ -559,13 +559,13 @@
         </div>
         <div class="div-pago">
           <h4>
-            ¡Aprovechá el 50 % de descuento por el mes de Junio!
+            ¡Aprovechá el 50 % de descuento por el mes de Julio!
           </h4>
           <div class="boton-pago">
             <p>
               Tenés 7 días una vez realizado el pago para solicitar un reintegro si no es lo que esperabas o si no cumplimos tus espectativas. Te devolvemos el 100% del diner. Sin preguntas.
             </p>
-            <button class="btn btn-primary inscribirme-btn" onclick="window.open('https://hotm.art/marroquineria_m', '_blank')">
+            <button class="btn btn-primary inscribirme-btn" onclick="window.open('https://hotm.art/MarroquineriaMaxDescuento', '_blank')">
               Conocé el costo
             </button>
           </div>
