--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
         </div>
         <div id="inscribirme" class="div-pago">
           <h4>
-            ¡Aprovechá el 50% de descuento por el mes de Julio!
+            ¡Aprovechá el 50% de descuento por el mes de Agosto!
           </h4>
           <div class="boton-pago">
             <p>
@@ -559,7 +559,7 @@
         </div>
         <div class="div-pago">
           <h4>
-            ¡Aprovechá el 50 % de descuento por el mes de Julio!
+            ¡Aprovechá el 50 % de descuento por el mes de Agosto!
           </h4>
           <div class="boton-pago">
             <p>
