--- a/index.html
+++ b/index.html
@@ -399,6 +399,66 @@
             </button>
           </div>
         </div>
+        <div>
+          <h2>
+          Dudas que te genera el curso
+        </h2>
+        <div class="accordion">
+          <div class="accordion-item">
+            <h3 class="accordion-header">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#conocimiento" aria-expanded="true" aria-controls="habilidad">
+                Falta de conocimientos previos
+              </button>
+            </h3>
+            <div id="conocimiento" class="accordion-collapse collapse">
+              <div class="accordion-body">
+                <p>
+                  Nuestro curso de marroquinería online está diseñado para adaptarse a diferentes niveles de habilidad, desde principiantes hasta aquellos con experiencia previa. Si eres nuevo en la marroquinería, te proporcionaremos una base sólida de conocimientos y técnicas fundamentales para que puedas comenzar a crear tus propios productos de cuero. Si ya tienes experiencia en marroquinería, nuestro curso te brindará la oportunidad de perfeccionar tus habilidades y aprender técnicas más avanzadas para llevar a cabo tus creaciones al siguiente nivel.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h3 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#inversión" aria-expanded="false" aria-controls="tiempo">
+                ¿Vale la pena la inversión?
+              </button>
+            </h3>
+            <div id="inversión" class="accordion-collapse collapse">
+              <div class="accordion-body">
+                La inversión en nuestro curso no es solo en conocimientos, sino en la posibilidad de crear piezas de cuero únicas. Tenemos miles de alumnos que nos respaldan y los eligen día a día. Además, ofrecemos una garantía de satisfacción. Si no estás satisfecho en las primeras semanas, te reembolsamos.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h3 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#resultados" aria-expanded="false" aria-controls="Módulos">Incertidumbre sobre los resultados
+              </button>
+            </h3>
+            <div id="resultados" class="accordion-collapse collapse">
+              <div class="accordion-body">
+                <p>
+                  Hemos visto a miles de estudiantes lograr resultados increibles. Nuestro enfoque práctico y personalizado garantiza que no solo aprendas, sino que también crees productos de calidad desde el principio.
+                </p>
+              </div>
+            </div>
+          </div>  
+          <div class="accordion-item">
+            <h3 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#materiales" aria-expanded="false" aria-controls="Logross">
+                Dificultad para encontrar materiales
+              </button>
+            </h3>
+            <div id="materiales" class="accordion-collapse collapse">
+              <div class="accordion-body">
+                <p>
+                  Te proporcionamos listas detalladas de materiales y te ofrecemos consejos sobre dónde encontrarlos fácilmente. Además, estamos aquí para ayudarte a encontrar alternativas accesibles y de calidad.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
         <div class="carrousel-box">
           <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
@@ -441,7 +501,7 @@
         </div>
         <div>
           <h4 class="h4-recomendaciones">
-            Más de 2.000 estudiantes nos recomiendan!
+            Más de 3.000 estudiantes nos recomiendan!
           </h4>
           <div class="container">
             <div class="row">
@@ -587,7 +647,7 @@
           <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
         </svg>
       </a>
-      <a href="https://www.tiktok.com/@marroquineria_emprende?_t=8cLsqLN1spB&_r=1" target="_blank">
+      <a href="https://www.tiktok.com/@marroquineriaemprende" target="_blank">
         <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-tiktok" viewBox="0 0 16 16">
           <path d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3V0Z"/>
         </svg>
