nuevo link agosto

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                 <p>
                   Te esperamos en el curso BÁSICO para que puedas iniciar en el mundo de la Marroquineria.
                 </p>
-                <button class="btn btn-primary inscribirme-btn" onclick="window.open('https://hotm.art/descuentoexclusivopremium', '_blank')">
+                <button class="btn btn-primary inscribirme-btn" onclick="window.open('https://hotm.art/qe584p76', '_blank')">
                   Conocé el costo
                 </button>
               </div>
@@ -636,7 +636,7 @@
                 <p>
                   Te esperamos en el curso BÁSICO para que puedas iniciar en el mundo de la Marroquineria.
                 </p>
-                <button class="btn btn-primary inscribirme-btn" onclick="window.open('https://hotm.art/descuentoexclusivopremium', '_blank')">
+                <button class="btn btn-primary inscribirme-btn" onclick="window.open('https://hotm.art/qe584p76', '_blank')">
                   Conocé el costo
                 </button>
               </div>
