--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
         <div id="inscribirme" class="div-pago">
           <figure class="figure text-center">
             <h4 class="figure-caption">
-              ¡Aprovechá el 50% de descuento por el mes de Agosto!
+              ¡Aprovechá el 50% de descuento por el mes de Septiembre!
             </h4>
           </figure>
           <figure class="figure-pago">
@@ -626,7 +626,7 @@
         <div id="inscribirme" class="div-pago">
           <figure class="figure text-center">
             <h4 class="figure-caption">
-              ¡Aprovechá el 50% de descuento por el mes de Agosto!
+              ¡Aprovechá el 50% de descuento por el mes de Septiembre!
             </h4>
           </figure>
           <figure class="figure-pago">
